--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+
+    <div class="container">
+      
+    </div>
+
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
